--- a/StilosEnbalzor/Shared/ClienteDominio.razor
+++ b/StilosEnbalzor/Shared/ClienteDominio.razor
@@ -5,14 +5,26 @@
                class="appearance-none rounded-none px-3 py-2
                                border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
                                focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-               placeholder="Cliente" />
+               placeholder="Cliente" 
+               value="@Cliente"
+               @onchange="@((ChangeEventArgs e) => Cliente =
+                            e.Value.ToString())"/>
     </div>
     <div>
         <label> Domicilio Fical </label>
         <input type="text"
-               class="appearance-none rounded-none px-3 py-2
+               class="appearance-none rounded-none px-1 py-2
                                border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
                                focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-               placeholder="Domicilio Fical" />
+               placeholder="Domicilio Fical"
+               value="@DomicilioFiscal"
+               @onchange="@((ChangeEventArgs e) => DomicilioFiscal= e.Value.ToString())"/>
     </div>
 </div>
+@code
+{
+    [Parameter]
+    public string Cliente { get; set; }
+    [Parameter]
+    public string DomicilioFiscal { get; set; }
+}
