--- a/StilosEnbalzor/Pages/GenerarFatura.razor
+++ b/StilosEnbalzor/Pages/GenerarFatura.razor
@@ -1,22 +1,55 @@
 ﻿@page "/GenerarFatura"
+@inject IDatos<Articulo> service
+@inject IFactura ServicioFactura
 
-<InfoB Moneda="moneda"></InfoB>
-<Aticulos Articulos="articulos"></Aticulos>
-<AutoCoplate></AutoCoplate>
+<div class="grid grid-rows-3">
+    <diiv>
 
-@code 
+        <InfoB comprobate="@ComprobateS"
+               OnFacturar="crear"></InfoB>
+    </diiv>
+    <diiv>
+        <Aticulos Articulos="@service.GetList()"></Aticulos>
+        
+    </diiv>
+    <div class="grid grid-cols-4">
+        <div class="col-start-4 col-end-4">
+            <button class="group relative w-100  px-3 py-2 justify-self-start  border border-transparent
+                     text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700
+                     focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                    @onclick="crear">
+                Facturar
+            </button>
+        </div>
+        <p>@Mostrar</p>
+    </div>
+</div>
+@code
 {
-    public List<Articulo> articulos = new List<Articulo>
-    {
-        new Articulo{articulo ="Jabon",Nombre="Zoote",Precio="21",Decuento="1%",Um="Piesa",Unidades="13",Importe="237"}
-    };
+    Comprobate ComprobateS { get; set; }
+    String Mostrar;
 
-    public List<string> moneda = new List<string> 
-    { 
+    void crear()
+    {
+        Mostrar = ServicioFactura.CrearFactura(ComprobateS);
+    }
+
+    public Comprobate GetComprobate()
+    {
+        return new Comprobate();
+    }
+
+    public List<string> moneda = new List<string>
+{
         "Peso Mexino",
         "Dolar US",
         "Peso Colombiano",
         "Euro",
         "Dolar Canadiense "
     };
+
+    protected override void OnInitialized()
+    {
+        ComprobateS = GetComprobate();
+    }
 }
