--- a/StilosEnbalzor/Shared/Aticulos.razor
+++ b/StilosEnbalzor/Shared/Aticulos.razor
@@ -1,63 +1,68 @@
-﻿<div class="grid  grid-rows-2" >
-    <div style="padding: 10px">
-        
-            <input type="text"
+﻿<div class="grid  grid-rows-3">
+    <div style="">
 
-               class="appearance-none rounded-none  w-1/2 px-3 py-2  border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-               placeholder="Dominio Fical" />
-             <button
-                class="group relative w-100  px-3 py-2 justify-center  border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                Agregar 
+        <input type="text"
+               class="appearance-none rounded-none  w-1/2 px-3 py-2
+                   border border-gray-300 placeholder-gray-500 text-gray-900
+                   rounded-t-md focus:outline-none focus:ring-indigo-500
+                   focus:border-indigo-500 focus:z-10 sm:text-sm"
+               placeholder="Buscar Articulo Por (Nombre)" />
+
+        <button class="group relative w-100  px-3 py-2 justify-self-start  border border-transparent
+                     text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700
+                     focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            Buscar
         </button>
-       
-    </div >
-    
-    <div style="padding: 10px">
+        <button class="group relative w-100  px-3 py-2 justify-self-start border border-transparent
+                      text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700
+                      focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            Agregar
+        </button>
+
+
+    </div>
+
+    <div style="" class=" h-32 overflow-auto">
         <div>
             <table class="min-w-full divide-y divide-gray-200">
                 <thead>
                     <tr>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-300">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-400">
                             Articulo
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-400">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-300">
                             Nombre
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-300">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-400">
                             UM
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-400">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-300">
                             Unidades
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-300">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-400">
                             Precio
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-400">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-300">
                             Decuento
                         </th>
-                        <th
-                            class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-pink-300">
+                        <th class="px-6 py-3 text-left text-xs font-medium text-black uppercase tracking-wider bg-indigo-400">
                             Importe
                         </th>
                     </tr>
                 </thead>
-                <tbody class="bg-white divide-y divide-gray-200">
+
+
+                <tbody class="bg-white divide-y divide-gray-200 ">
                     @foreach (var item in Articulos)
                     {
                         <tr>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-300">@item.articulo</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-400">@item.Nombre</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-300">@item.Um</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-400">@item.Unidades</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-300">@item.Precio</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-400">@item.Decuento</td>
-                            <td class="px-6 py-4 whitespace-nowrap bg-pink-300">@item.Importe</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.articulo</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Nombre</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Um</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Unidades</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Precio</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Decuento</td>
+                            <td class="px-6 py-4 whitespace-nowrap ">@item.Importe</td>
 
                         </tr>
                     }
@@ -65,7 +70,8 @@
             </table>
         </div>
     </div>
-    </div>
+    
+</div>
 @code
 {
     [Parameter]
