--- a/StilosEnbalzor/Shared/Fecha.razor
+++ b/StilosEnbalzor/Shared/Fecha.razor
@@ -4,5 +4,12 @@
            class="appearance-none rounded-none px-3 py-2
                                border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
                                focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-           placeholder="Fecha " />
+           placeholder="Fecha " 
+           value="@Valor"
+           @onchange="@((ChangeEventArgs e)=> Valor = e.Value.ToString())"/>
 </div>
+@code 
+{ 
+    [Parameter]
+    public string Valor { get; set; }
+}
