--- a/StilosEnbalzor/Shared/FolioSerie.razor
+++ b/StilosEnbalzor/Shared/FolioSerie.razor
@@ -4,6 +4,14 @@
            class="appearance-none rounded-none px-3 py-2
                                border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
                                focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-           placeholder="Folio" />
+           placeholder="Folio" 
+           value="@Folio"
+            @onchange="@((ChangeEventArgs e)=> Folio = e.Value.ToString())"
+           />
 
 </div>
+@code
+{
+    [Parameter]
+    public string Folio { get; set; }
+}
