--- a/StilosEnbalzor/Shared/InfoB.razor
+++ b/StilosEnbalzor/Shared/InfoB.razor
@@ -1,49 +1,71 @@
-﻿<from>
+﻿<form>
     <div class="grid grid-rows-3">
         <div>
-            <div class="grid grid-cols-3" style="padding: 10px">
+            <div class="grid grid-cols-4" style="padding: 10px">
                 <div >
                     
-                       <FolioSerie></FolioSerie> 
-                    
+                       <FolioSerie Folio="@comprobate.Folio"></FolioSerie> 
+                       
                 </div>
-                <div>
-                    <UsoCfd></UsoCfd>
+                <div class="grid col-start-2 col-end3">
+                    <UsoCfd UsoCFDI="@comprobate.UsoFDCI"></UsoCfd>
                 </div>
                 <div>
                     <label> Tipo de comprobate </label>
-                    <select class="group relative w-100  px-3 py-2 justify-center  border border-transparent text-sm
+                    <select class="group relative w-100  px-3 py-2 justify-self-start  border border-transparent text-sm
                         font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
-                        focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                        >
-                       <option>Ingreso</option>
-                       <option>Egreso</option>
-                       <option>Traslado</option>
-                        
+                        focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" bind="@comprobate.TipoDeComprobate">
+
+                        <option value="Ingreso">Ingreso</option>
+                        <option value="Egreso">Egreso</option>
+                        <option value="Traslado">Traslado</option>
+
                     </select>
+                    <p>1 @comprobate.TipoDeComprobate</p>
                 </div>
             </div>
         </div>
+
         <div class="grid grid-cols-2" style="padding: 10px">
             <div>
-               <ClienteDominio></ClienteDominio> 
+               <ClienteDominio Cliente="@comprobate.Cliente"
+                               DomicilioFiscal="@comprobate.DomiciloFical"></ClienteDominio> 
             </div>
             <div>
-                <Moneda Monedas="Moneda"></Moneda>
+                <Moneda Monedas="@moneda"
+                        GetMoneda="@comprobate.Moneda"></Moneda>
             </div>
         </div>
-        <div class="grid grid-cols-2" style="padding: 10px">
+        <div class="grid grid-cols-4" style="padding: 10px">
             <div>
-                <Fecha></Fecha>
+                <Fecha Valor="@comprobate.Fecha"></Fecha>
             </div>
-            <div>
-               <FormadePago></FormadePago>
+            <div class="grid col-start-2 col-end3">
+                <FormadePago FormaDeCobro="@comprobate.FormaDeCobro"></FormadePago>
             </div>
+
+            
+
         </div>
     </div>
-</from>
+</form>
+
 @code {
+
     [Parameter]
-    public List<string> Moneda { get; set; }
+    public Comprobate comprobate { get; set; }
+    
+
+
+    public List<string> moneda = new List<string>
+{
+        "Peso Mexino",
+        "Dolar US",
+        "Peso Colombiano",
+        "Euro",
+        "Dolar Canadiense "
+
+        };
+    
 
 }
