--- a/StilosEnbalzor/Shared/Moneda.razor
+++ b/StilosEnbalzor/Shared/Moneda.razor
@@ -1,17 +1,20 @@
 ﻿<div>
     <label> Moneda </label>
-    <select class="group relative w-100  px-3 py-2 justify-center  border border-transparent text-sm
+    <select class="group relative w-100  px-3 py-2 justify-self-start  border border-transparent text-sm
                         font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none
-                        focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-        >
+                        focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            bind="@GetMoneda">
+        
         @foreach (var item in Monedas)
         {
-            <option>@item</option>
+            <option value="@item">@item</option>
         }
     </select>
 </div>
 @code {
+
     [Parameter]
     public List<string> Monedas { get; set; }
-
+    [Parameter]
+    public string GetMoneda { get; set; }
 }
