--- a/StilosEnbalzor/Shared/NavMenu.razor
+++ b/StilosEnbalzor/Shared/NavMenu.razor
@@ -8,7 +8,11 @@
     </div>
 
     <!--Sidebar-->
-    <div class="w-full md:w-1/5 bg-gray-900 md:bg-gray-900 px-1 text-center fixed bottom-0 md:pt-8 md:top-0 md:left-0 h-16 md:h-screen md:border-r-4 md:border-gray-500">
+    <div class="w-full md:w-1/5 bg-gray-900 md:bg-gray-900 
+         px-1 text-center fixed bottom-0 
+         md:pt-8 md:top-0 md:left-0 h-16 
+         md:h-screen md:border-r-4 md:border-gray-500">
+
         <div class="md:relative mx-auto lg:float-right lg:px-3">
             <ul class="list-reset flex flex-row md:flex-col text-center md:text-left">
                 @foreach (var item in MenuItems)
