--- a/StilosEnbalzor/Shared/FolioSerie.razor
+++ b/StilosEnbalzor/Shared/FolioSerie.razor
@@ -1,13 +1,16 @@
 ﻿<div>
     <label> Folio </label>
-    <input type="text"
-           class="appearance-none rounded-none px-3 py-2
-                               border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
-                               focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-           placeholder="Folio" 
-           value="@Folio"
-            @onchange="@((ChangeEventArgs e)=> Folio = e.Value.ToString())"
-           />
+    <InputTextArea id="content" @bind-Value="Folio" 
+                   class="appearance-none rounded-none px-3 py-2
+                            border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
+                            focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" />
+    @* <input type="text"
+        class="appearance-none rounded-none px-3 py-2
+                            border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md
+                            focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+        placeholder="Folio"
+        value="@Folio"
+        @onchange="@((ChangeEventArgs e)=> Folio = e.Value.ToString())" />*@
 
 </div>
 @code
